--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-nav #fh5co-logo {
   font-size: 24px;
   margin: 0;
+  margin-top: 20px;
   padding: 0;
   text-transform: uppercase;
   font-weight: bold;
@@ -660,7 +661,6 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .services {
   padding: 25px;
-  margin-top: -10em;
   background: #fff;
   -webkit-box-shadow: 0px 10px 23px -10px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 0px 10px 23px -10px rgba(0, 0, 0, 0.43);
